# implement_dvc_emotion_detection

./: .env.example  .gitignore  README.md  cmd.txt  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: test-ci.yml
data/: .gitignore
notebooks/: extract_data.ipynb
notebooks/eda/: eda.ipynb
notebooks/experiments/: data_ingest.py  exp_1.ipynb  exp_2.ipynb  final_exp.ipynb  preprocess.py
src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py
